--- a/33.4.2
+++ b/33.4.2
@@ -12,5 +12,13 @@ while myTime <= 20:
       RPL.servoWrite(0,1590)
       time.sleep(0.5)
       RPL.servoWrite(0,1500)
+      time.sleep(0.5)
+      RPL.servoWrite(0,1590)
+      time.sleep(0.5)
+      RPL.servoWrite(0,1500)
+      time.sleep(0.5)
+      RPL.servoWrite(0,1590)
+      time.sleep(0.5)
+      RPL.servoWrite(0,1500)
 
 
