--- a/33.5.2
+++ b/33.5.2
@@ -10,7 +10,7 @@ for number in pin:
 def execut():
   global fire_count
   fire_count += 1
-  print('The motor has pulsed %s times' % (fire_count))
+  print('z' z (fire_count))
   RPL.servoWrite(0,1590)
   RPL.servoWrite(1,1410)
   time.sleep(1)
